# PCSC-Numerical-Integration

./: .gitignore  .gitmodules  AbstractIntegrationMethod.cpp  AbstractIntegrationMethod.h  AbstractReader.cpp  AbstractReader.h  CMakeLists.txt  DOCS_MAIN_PAGE.md  DataStruct.h  Doxyfile  MidpointFormula.cpp  MidpointFormula.h  README.md  SimpsonsRule.cpp  SimpsonsRule.h  Test.cpp  TrapezoidalRule.cpp  TrapezoidalRule.h  TxtReader.cpp  TxtReader.h  integration.cpp  integration.h  offreadfile.cpp  offreadfile.h  readfile.cpp  readfile.txt
html/: AbstractIntegrationMethod_8h_source.html  AbstractReader_8h_source.html  DataStruct_8h_source.html  MidpointFormula_8h_source.html  SimpsonsRule_8h_source.html  TrapezoidalRule_8h_source.html  TxtReader_8h_source.html  _abstract_integration_method_8h.html  _abstract_integration_method_8h__dep__incl.map  _abstract_integration_method_8h__dep__incl.md5  _abstract_integration_method_8h__incl.map  _abstract_integration_method_8h__incl.md5  _abstract_integration_method_8h_source.html  _abstract_reader_8h_source.html  _data_struct_8h_source.html  _midpoint_formula_8h_source.html  _simpsons_rule_8h_source.html  _trapezoidal_rule_8h_source.html  _txt_reader_8h_source.html  annotated.html  classAbstractIntegrationMethod-members.html  classAbstractIntegrationMethod.html  classAbstractIntegrationMethod__coll__graph.map  classAbstractIntegrationMethod__coll__graph.md5  classAbstractIntegrationMethod__inherit__graph.map  classAbstractIntegrationMethod__inherit__graph.md5  classAbstractReader-members.html  classAbstractReader.html  (+92 more)
(+88 files in other folders)
